tests/ui/opts/param_lifetime.stderr
error: cannot implement FuncMap over lifetime parameter
 --> tests/ui/opts/param_lifetime.rs:4:18
  |
4 | #[funcmap(params('a))]
  |                  ^^
